Modificado url.ini

--- a/sportbot/sportbot/url.ini
+++ b/sportbot/sportbot/url.ini
@@ -1,3 +1,4 @@
 [livescore]
 champ=http://www.livescore.com/soccer/champions-league/
-spain=http://www.livescore.com/soccer/spain/
+spain1=http://www.livescore.com/soccer/spain/primera-division/
+spain2=http://www.livescore.com/soccer/spain/segunda-division/
