--- a/sportbot/sportbot/url.ini
+++ b/sportbot/sportbot/url.ini
@@ -1,4 +1,3 @@
 [livescore]
 champ=http://www.livescore.com/soccer/champions-league/
-spain1=http://www.livescore.com/soccer/spain/primera-division/
-spain2=http://www.livescore.com/soccer/spain/segunda-division/
+spain=http://www.livescore.com/soccer/spain/
